--- a/www/index.html
+++ b/www/index.html
@@ -392,19 +392,41 @@
         background: var(--secondary-fg-semi-transparent);
     }
 
-    ul#files > li > .image:hover {
+    ul#files > li:hover > .image {
         filter: brightness(117%);
     }
 
     ul#files > li > .image {
         max-width: 80%;
-        min-height: calc(var(--grid-size) - 40px);
-        max-height: calc(var(--grid-size) - 40px);
+        min-height: calc(var(--grid-size) - 60px);
+        max-height: calc(var(--grid-size) - 60px);
         object-fit: contain;
     }
 
     ul#files > li > span {
         text-align: center;
+        max-width: 100%;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        padding-top: 3px;
+    }
+
+    ul#files > li > span[contenteditable] {
+        text-overflow: unset;
+        -webkit-line-clamp: unset;
+    }
+
+    ul#files > li:hover > span:not([contenteditable]) {
+        display: block;
+        overflow: visible;
+        z-index: 1;
+        background: var(--primary-bg-semi-transparent);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 4px;
+        line-break: anywhere;
     }
 
     #action-wrapper {
