--- a/www/index.html
+++ b/www/index.html
@@ -179,6 +179,7 @@
         background: var(--color-offwhite);
         border-radius: 10px;
         z-index: 2;
+        box-shadow: 2px 2px 10px 2px var(--color-dim-gray);
     }
 
     header .menu .content form {
