Add removal of file transfer box on close

--- a/www/index.html
+++ b/www/index.html
@@ -1902,6 +1902,7 @@
                     break;
                 case 'Close':
                     document.getElementById('file-transfer-popup').classList.remove('showing');
+                    document.getElementById('file-transfer-menu-icon').classList.remove('showing');
                     break;
             }
 
