Fix back button reduced color

--- a/www/index.html
+++ b/www/index.html
@@ -316,7 +316,7 @@
 
     header.compressed button#back {
         background: transparent;
-        border: 0.1px solid pink;
+        border: 0.1px solid var(--primary-fg-semi-transparent);
         color: var(--color-offwhite);
         height: 18px;
         font-size: 12px;
