Add better default fonts

--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,10 @@
         -webkit-user-select: none;
         user-select: none;
         cursor: default;
+
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     }
 
     input[type="text"], [contenteditable] {
